# MPC-Tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
2D-Tracker/: MPC_2DTracker.py
HelperFunctions/: smallestcircle.py
mpc_tracker/Tracker_2D/: MPC_2DTracker.py
mpc_tracker/custom_helpers/: helper_classes.py  helper_functions.py
src/Tracker_2D/: MPC_2DTracker.py
src/Tracker_3D/: MPC_3DTracker.py
src/custom_helpers/: helper_classes.py  smallest_circle.py
