[tool.poetry]
name = "mpc-tracker"
version = "0.1.0"
description = "Python toolbox to ease the use of MPC for tracking a goal with the presence of obstacles"
authors = ["Arturo Roberti <arturo.roberti@outlook.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
casadi = "3.6.6"
contourpy = "1.3.0"
cycler = "0.12.1"
dataclasses = "0.6"
do-mpc = "4.6.5"
fonttools = "4.54.1"
kiwisolver = "1.4.7"
matplotlib = "3.9.2"
numpy = "1.26.4"
packaging = "24.1"
pillow = "10.4.0"
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
scipy = "1.14.1"
shapely = "2.0.6"
six = "1.16.0"
termcolor = "2.4.0"
typing = "3.7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
